Update index.html, images/, and style.css
New polar-bear-1.img
Add styling to index.html using style.css

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>My test page</title>
+    <link href="styles/style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
   </head>
   <body>
     <h1>Polar bears in design</h1>
     <h2>Computer design examples</h2>
-    <h3>Background images</h3>
+    <h3>Graphics</h3>
     <img src="images/polar-bear-1.jpg" alt="Digital polar bear icon set on a black background">
     <p>Here you'll find a polar bear graphic. As you can see, the white
-      polar bear sits in contrast against the black background. This contrast
+      polar bear sits in contrast against the blue background. This contrast
       allows the polar to feature prominently in the design.</p>
     <p>Polar bears are known for being</p>
 
