Add main.js file to the scripts/ directory
Add second polar bear image to images/
Link main.js to index.html
Create function in main.js to change between the images in images/

--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
     <p>Showing their ability to adapt to the harsh conditions of their native range.
       You can learn more about them <a href="https://en.wikipedia.org/wiki/Polar_bear">here</a>
       on the Wikipedia page for "Polar bear". Enjoy learning more about them!</p>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
