Add personalized greeting to header

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>My test page</title>
+    <title>Polar bears are cool!</title>
     <link href="styles/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
   </head>
@@ -25,6 +25,7 @@
     <p>Showing their ability to adapt to the harsh conditions of their native range.
       You can learn more about them <a href="https://en.wikipedia.org/wiki/Polar_bear">here</a>
       on the Wikipedia page for "Polar bear". Enjoy learning more about them!</p>
+    <button>Change user</button>
     <script src="scripts/main.js"></script>
   </body>
 </html>
